# eeva

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  experiment_running.md  pyproject.toml  setup.py
cache/algorithm/: __init__.py  abstractCache.py  eeva.py  eeva_seq.py  eeva_t.py  proposed.py  requestItem.py
cache/config/: __init__.py
cache/runners/: __init__.py  experiment_runner.py  libCache_runner.py  proposed_runner.py
cache/utils/: costs_calc.py  drawer.py  req_generator.py  time_checker.py  trace_utils.py
conf/: config.py  config.yaml
eeva/: __init__.py
eeva/algorithm/: __init__.py  eeva.py  eeva_seq.py  proposed_UCB.py  requestItem.py
eeva/runners/: __init__.py  experiment_runner.py  libCache_runner.py  proposed_runner.py
eeva/utils/: costs_calc.py  drawer.py  req_generator.py
experiment_configs/different_dencity/: scan_eq_get.yaml  scan_greater_get.yaml  scan_lower_get.yaml  zero_scan.yaml
experiment_configs/dummy_conf/: dummy.yaml
experiment_configs/exp_conf_grid/: grid.yaml  grid_big.yaml  grid_bigg.yaml
experiment_configs/exp_configs/: scan_eq_get.yaml  scan_greater_get.yaml  scan_lower_get.yaml  scan_more_distinguish.yaml  zero_scan.yaml
experiment_configs/running/: scan_eq_get.yaml  scan_greater_get.yaml  scan_lower_get.yaml
experiment_helpers/: run_config.py  run_grid_cscan.py  run_grid_experiment.py  run_grid_pscan.py  run_grid_scan_tables.py  script_user.ipynb
experiment_helpers/scripts/: __init__.py  config_setter.py  grid_plot.py  redraw.py  template.txt  to_tex.py  trash.py
libcache/: Dockerfile  sim.c
